# ghostess

./: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  ghostess.1
src/: Makefile.am  eyecandy.c  eyecandy.h  getarg.c  getarg.h  ghostess.c  ghostess.h  gui_callbacks.c  gui_callbacks.h  gui_interface.c  gui_interface.h  midi-alsa.c  midi-coremidi.c  midi-jack.c  midi.h  universal_gui.c  universal_gui.h
